add fb functions

--- a/FUploader/appsettings.json
+++ b/FUploader/appsettings.json
@@ -13,6 +13,11 @@
       }
     }
   },
-  "MaxFileLength": 20
-
+  "MaxFileLength": 20,
+  "Firebase": {
+    "apiKey": "AIzaSyBp0Ro_ej2rFUhB_lYc_e40we56-AQJyqI",
+    "authDomain": "filechanger-dcde7.firebaseapp.com",
+    "Bucket": "filechanger-dcde7.appspot.com",
+    "uploadFolder": "zvit"
+  }
 }
