--- a/FUploader/appsettings.json
+++ b/FUploader/appsettings.json
@@ -14,10 +14,15 @@
     }
   },
   "MaxFileLength": 20,
+  "filialName": "capitulna 1",
   "Firebase": {
     "apiKey": "AIzaSyBp0Ro_ej2rFUhB_lYc_e40we56-AQJyqI",
     "authDomain": "filechanger-dcde7.firebaseapp.com",
     "Bucket": "filechanger-dcde7.appspot.com",
     "uploadFolder": "zvit"
+  },
+  "Telegramm": {
+    "botid": "6413752425:AAENnGXuBWDaWMpqKfBTk_Q8YEl-4u84RTY",
+    "chatid": "-1002136532945"
   }
 }
